feat: add case detail pages with interactive previews and i18n support

--- a/cases.html
+++ b/cases.html
@@ -25,11 +25,11 @@
   <!-- Mobile Nav Overlay -->
   <div class="mobile-nav-overlay">
     <nav class="mobile-nav-links">
-      <a href="index.html" class="mobile-nav-link"><span>🏠</span> Home</a>
-      <a href="about.html" class="mobile-nav-link"><span>🙋‍♀️</span> About Me</a>
-      <a href="skills.html" class="mobile-nav-link"><span>🛠️</span> Tools & Skills</a>
-      <a href="cases.html" class="mobile-nav-link"><span>💼</span> Cases</a>
-      <a href="faq.html" class="mobile-nav-link"><span>❓</span> FAQ</a>
+      <a href="index.html" class="mobile-nav-link"><span>🏠</span> <span data-i18n="nav.home">Home</span></a>
+      <a href="about.html" class="mobile-nav-link"><span>🙋‍♀️</span> <span data-i18n="nav.about">About Me</span></a>
+      <a href="skills.html" class="mobile-nav-link"><span>🛠️</span> <span data-i18n="nav.skills">Tools & Skills</span></a>
+      <a href="cases.html" class="mobile-nav-link"><span>💼</span> <span data-i18n="nav.cases">Cases</span></a>
+      <a href="faq.html" class="mobile-nav-link"><span>❓</span> <span data-i18n="nav.faq">FAQ</span></a>
     </nav>
     
     <div class="mobile-social-icons">
@@ -57,19 +57,19 @@
       
       <nav class="sidebar-nav">
         <div class="nav-indicator"></div>
-        <a href="index.html" class="sidebar-item" data-tooltip="Home">
+        <a href="index.html" class="sidebar-item" data-tooltip="Home" data-i18n-tooltip="nav.home">
           <span class="icon-box">🏠</span>
         </a>
-        <a href="about.html" class="sidebar-item" data-tooltip="About Me">
+        <a href="about.html" class="sidebar-item" data-tooltip="About Me" data-i18n-tooltip="nav.about">
           <span class="icon-box">👋</span>
         </a>
-        <a href="skills.html" class="sidebar-item" data-tooltip="Tools & Skills">
+        <a href="skills.html" class="sidebar-item" data-tooltip="Tools & Skills" data-i18n-tooltip="nav.skills">
           <span class="icon-box">🛠️</span>
         </a>
-        <a href="cases.html" class="sidebar-item active" data-tooltip="Cases">
+        <a href="cases.html" class="sidebar-item active" data-tooltip="Cases" data-i18n-tooltip="nav.cases">
           <span class="icon-box">💼</span>
         </a>
-        <a href="faq.html" class="sidebar-item" data-tooltip="FAQ">
+        <a href="faq.html" class="sidebar-item" data-tooltip="FAQ" data-i18n-tooltip="nav.faq">
           <span class="icon-box">❓</span>
         </a>
 
@@ -106,14 +106,14 @@
     <main class="main-content">
       <div class="header-card">
         <div class="header-left">
-          <h1>Cases</h1>
+          <h1 data-i18n="cases.title">"Cases"</h1>
           <div class="tags-row">
-            <span class="tag-pill">#projects 🚀</span>
-            <span class="tag-pill">#portfolio 📁</span>
-            <span class="tag-pill">#design 🎨</span>
+            <span class="tag-pill" data-i18n="cases.tag.projects">#projects 🚀</span>
+            <span class="tag-pill" data-i18n="cases.tag.portfolio">#portfolio 📁</span>
+            <span class="tag-pill" data-i18n="cases.tag.design">#design 🎨</span>
           </div>
         </div>
-        <p class="quote">Every project is a story<br>of solving problems<br>through design.</p>
+        <p class="quote" data-i18n="cases.quote">"Every project is a story<br>of solving problems<br>through design."</p>
       </div>
 
       <div class="cases-grid">
@@ -126,54 +126,54 @@
             <div class="running-line-wrapper">
               <div class="rotate-container angle-1">
                 <div class="running-line">
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
-                  <span>SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
+                  <span data-i18n="cases.running.sunrise">SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE SUNRISE</span>
                 </div>
               </div>
               <div class="rotate-container angle-2">
                 <div class="running-line reverse small">
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
-                  <span>TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
+                  <span data-i18n="cases.running.topsecret">TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET TOP SECRET</span>
                 </div>
               </div>
             </div>
 
             <div class="card-overlay">
-              <span class="view-project">View Case Study</span>
+              <span class="view-project" data-i18n="cases.view_project">View Case Study</span>
             </div>
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h4 class="card-title">Sunrise</h4>
-              <span class="year-badge">2025-Present</span>
+              <h4 class="card-title" data-i18n="cases.sunrise.title">Sunrise</h4>
+              <span class="year-badge" data-i18n="cases.sunrise.year">2025-Present</span>
             </div>
-            <p class="card-desc">Web game</p>
+            <p class="card-desc" data-i18n="cases.sunrise.desc">Web game</p>
             <div class="tech-stack">
-              <span class="tech-tag">Figma</span>
-              <span class="tech-tag">Illustrator</span>
-              <span class="tech-tag">AI</span>
-              <span class="tech-tag">Prototyping</span>
-              <span class="tech-tag">UX Research</span>
+              <span class="tech-tag" data-i18n="cases.sunrise.tech.1">Figma</span>
+              <span class="tech-tag" data-i18n="cases.sunrise.tech.2">Illustrator</span>
+              <span class="tech-tag" data-i18n="cases.sunrise.tech.3">AI</span>
+              <span class="tech-tag" data-i18n="cases.sunrise.tech.4">Prototyping</span>
+              <span class="tech-tag" data-i18n="cases.sunrise.tech.5">UX Research</span>
             </div>
           </div>
         </a>
@@ -195,19 +195,19 @@
               </div>
             </div>
             <div class="card-overlay">
-              <span class="view-project">View Case Study</span>
+              <span class="view-project" data-i18n="cases.view_project">View Case Study</span>
             </div>
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h4 class="card-title">RealFace</h4>
-              <span class="year-badge">2025</span>
+              <h4 class="card-title" data-i18n="cases.realface.title">RealFace</h4>
+              <span class="year-badge" data-i18n="cases.realface.year">2025</span>
             </div>
-            <p class="card-desc">SAAS</p>
+            <p class="card-desc" data-i18n="cases.realface.desc">SAAS</p>
              <div class="tech-stack">
-              <span class="tech-tag">Figma</span>
-              <span class="tech-tag">Prototyping</span>
-              <span class="tech-tag">Relised</span>
+              <span class="tech-tag" data-i18n="cases.realface.tech.1">Figma</span>
+              <span class="tech-tag" data-i18n="cases.realface.tech.2">Prototyping</span>
+              <span class="tech-tag" data-i18n="cases.realface.tech.3">Relised</span>
             </div>
           </div>
         </a>
@@ -225,20 +225,20 @@
               <div class="heart-item">❤️</div>
             </div>
             <div class="card-overlay">
-              <span class="view-project">View Case Study</span>
+              <span class="view-project" data-i18n="cases.view_project">View Case Study</span>
             </div>
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h4 class="card-title">Languages Of Love</h4>
-              <span class="year-badge">2025</span>
+              <h4 class="card-title" data-i18n="cases.languages.title">Languages Of Love</h4>
+              <span class="year-badge" data-i18n="cases.languages.year">2025</span>
             </div>
-            <p class="card-desc">Mobile App</p>
+            <p class="card-desc" data-i18n="cases.languages.desc">Mobile App</p>
              <div class="tech-stack">
-              <span class="tech-tag">Figma</span>
-              <span class="tech-tag">User Flow</span>
-              <span class="tech-tag">Gamification</span>
-              <span class="tech-tag">UI Kit</span>
+              <span class="tech-tag" data-i18n="cases.languages.tech.1">Figma</span>
+              <span class="tech-tag" data-i18n="cases.languages.tech.2">User Flow</span>
+              <span class="tech-tag" data-i18n="cases.languages.tech.3">Gamification</span>
+              <span class="tech-tag" data-i18n="cases.languages.tech.4">UI Kit</span>
             </div>
           </div>
         </a>
@@ -302,20 +302,20 @@
               </div>
             </div>
             <div class="card-overlay">
-              <span class="view-project">View Case Study</span>
+              <span class="view-project" data-i18n="cases.view_project">View Case Study</span>
             </div>
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h4 class="card-title">Learning Hub</h4>
-              <span class="year-badge">2024</span>
+              <h4 class="card-title" data-i18n="cases.learninghub.title">Learning Hub</h4>
+              <span class="year-badge" data-i18n="cases.learninghub.year">2025</span>
             </div>
-            <p class="card-desc">EdTech • Admin Panel</p>
+            <p class="card-desc" data-i18n="cases.learninghub.desc">EdTech • Admin Panel</p>
              <div class="tech-stack">
-              <span class="tech-tag">Figma</span>
-              <span class="tech-tag">Dashboard</span>
-              <span class="tech-tag">UX Research</span>
-              <span class="tech-tag">Design System</span>
+              <span class="tech-tag" data-i18n="cases.learninghub.tech.1">Figma</span>
+              <span class="tech-tag" data-i18n="cases.learninghub.tech.2">Dashboard</span>
+              <span class="tech-tag" data-i18n="cases.learninghub.tech.3">UX Research</span>
+              <span class="tech-tag" data-i18n="cases.learninghub.tech.4">Design System</span>
             </div>
           </div>
         </a>
@@ -409,20 +409,20 @@
               </div>
             </div>
             <div class="card-overlay">
-              <span class="view-project">View Case Study</span>
+              <span class="view-project" data-i18n="cases.view_project">View Case Study</span>
             </div>
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h4 class="card-title">RefillArena</h4>
-              <span class="year-badge">2023</span>
+              <h4 class="card-title" data-i18n="cases.refillarena.title">RefillArena</h4>
+              <span class="year-badge" data-i18n="cases.refillarena.year">2023</span>
             </div>
-            <p class="card-desc">B2B • Gift Cards</p>
+            <p class="card-desc" data-i18n="cases.refillarena.desc">B2B • Gift Cards</p>
              <div class="tech-stack">
-              <span class="tech-tag">Figma</span>
-              <span class="tech-tag">Visual Identity</span>
-              <span class="tech-tag">AI</span>
-              <span class="tech-tag">Released</span>
+              <span class="tech-tag" data-i18n="cases.refillarena.tech.1">Figma</span>
+              <span class="tech-tag" data-i18n="cases.refillarena.tech.2">Visual Identity</span>
+              <span class="tech-tag" data-i18n="cases.refillarena.tech.3">AI</span>
+              <span class="tech-tag" data-i18n="cases.refillarena.tech.4">Released</span>
             </div>
           </div>
         </a>
@@ -434,23 +434,24 @@
               <span>✨</span>
             </div>
              <div class="card-overlay">
-              <span class="view-project">Coming Soon</span>
+              <span class="view-project" data-i18n="cases.coming_soon">Coming Soon</span>
             </div>
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h4 class="card-title">Next Project</h4>
-              <span class="year-badge">Future</span>
+              <h4 class="card-title" data-i18n="cases.nextproject.title">Next Project</h4>
+              <span class="year-badge" data-i18n="cases.nextproject.year">Future</span>
             </div>
-            <p class="card-desc">In Progress</p>
+            <p class="card-desc" data-i18n="cases.nextproject.desc">In Progress</p>
              <div class="tech-stack">
-              <span class="tech-tag">...</span>
+              <span class="tech-tag" data-i18n="cases.nextproject.tech.1">...</span>
             </div>
           </div>
         </a>
       </div>
     </main>
   </div>
+  <script src="translations.js"></script>
   <script src="script.js" defer></script>
 </body>
 </html>
